# BYU_Locating_Bacterial_Flagellar_Motors_2025

./: .gitignore  README.md  organize_project.py  pyproject.toml  requirements.txt  sampled_train_labels.csv  test.py
notebooks/: EDA.ipynb  Kerem.py  sample_creator.ipynb
src/: config.py
