[project]
name = "byu-flagellar-project"
version = "0.1.0"
description = "Detect and localize bacterial flagellar motors in tomograms using deep learning."
authors = [
    {name = "RamyBoulos",email = "ramyboulos@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "ultralytics (>=8.3.157,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
flake8 = "^7.3.0"
pre-commit = "^4.2.0"

